# sentinelx

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  KNOWN_LIMITATIONS.md  Makefile  PROJECT_STORAGE_REPORT.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  deny.toml  docker-compose.yml  sentinelx.toml
.cargo/: audit.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: feature_idea.yml  q_and_a.yml  show_and_tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/src/commands/: assess.rs  audit.rs  behavior.rs  config_cmd.rs  export.rs  fleet.rs  forensics.rs  graph.rs  incidents.rs  integrity.rs  intelligence.rs  kernel.rs  mod.rs  modules.rs  network.rs  processes.rs  response.rs  scan.rs  status.rs  telemetry.rs  threats.rs  timeline.rs  workflows.rs
apps/dashboard/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
apps/dashboard/src/: App.tsx  api.ts  index.css  types.ts
backend/: Cargo.toml
backend/src/: error.rs  main.rs  routes.rs
book/: book.toml
book/src/: README.md  SUMMARY.md  api.md  architecture.md  cli.md  configuration.md  dashboard.md  deployment.md  development.md  faq.md  fleet.md  installation.md  operations.md  performance.md  plugins.md  roadmap.md  security.md  troubleshooting.md
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/assessment/: Cargo.toml
crates/assessment/src/: config.rs  error.rs  lib.rs  store.rs  types.rs
crates/assessment/src/assessors/: file.rs  kernel.rs  memory.rs  mod.rs  module.rs  network.rs  process.rs  service.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/behavior/: Cargo.toml
crates/behavior/src/: engine.rs  lib.rs  types.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: analysis_pipeline.rs  detector_scan.rs  full_scan.rs  telemetry_throughput.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  event.rs  hash.rs  lib.rs  pid.rs  severity.rs  traits.rs  types.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  settings.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: assessment.rs  discovery.rs  error.rs  evidence.rs  lib.rs  metadata.rs  object.rs  pipeline.rs
crates/correlation/: Cargo.toml
crates/correlation/src/: evidence_correlator.rs  graph.rs  lib.rs  rules.rs
crates/database/: Cargo.toml
crates/database/src/: error.rs  lib.rs  repository.rs  store.rs
crates/detector/: Cargo.toml
crates/detector/src/: behavior.rs  engine.rs  event_bus.rs  lib.rs  plugin.rs  registry.rs  scoring.rs  trust.rs
crates/ebpf/: Cargo.toml
crates/ebpf/src/: engine.rs  lib.rs  provider.rs
crates/evidence/: Cargo.toml
crates/evidence/src/: lib.rs
crates/fanotify/: Cargo.toml
crates/fanotify/src/: lib.rs
crates/fleet/: Cargo.toml
crates/fleet/src/: lib.rs
crates/forensics/: Cargo.toml
crates/forensics/src/: collector.rs  lib.rs  snapshot.rs
crates/incident/: Cargo.toml
crates/incident/src/: engine.rs  lib.rs  types.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs  reliability.rs
crates/integrity/: Cargo.toml
crates/integrity/src/: baseline.rs  checker.rs  discovery.rs  lib.rs  metadata.rs  objects.rs
crates/intelligence/: Cargo.toml
crates/intelligence/src/: engine.rs  lib.rs  types.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: discovery.rs  hooks.rs  integrity.rs  lib.rs  metadata.rs  objects.rs  symbols.rs
crates/memory/: Cargo.toml
crates/memory/src/: discovery.rs  integrity.rs  lib.rs  metadata.rs  objects.rs
crates/module/: Cargo.toml
crates/module/src/: discovery.rs  lib.rs  metadata.rs  objects.rs  scanner.rs  trust.rs
crates/netlink/: Cargo.toml
crates/netlink/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: discovery.rs  lib.rs  metadata.rs  objects.rs  scanner.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: discovery.rs  file_analysis.rs  lib.rs  locations.rs  metadata.rs  objects.rs  package.rs  scanner.rs  trust.rs
crates/process/: Cargo.toml
crates/process/src/: discovery.rs  lib.rs  metadata.rs  objects.rs  scanner.rs
crates/reporting/: Cargo.toml
crates/reporting/src/: lib.rs  report.rs
crates/response/: Cargo.toml
crates/response/src/: audit.rs  engine.rs  lib.rs  policies.rs  types.rs  workflow.rs
crates/rule_engine/: Cargo.toml
crates/rule_engine/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: bus.rs  collector.rs  engine.rs  lib.rs  normalizer.rs  proc_connector.rs  provider.rs  provider_manager.rs  subscriber.rs  (+1 more)
crates/threat/: Cargo.toml
crates/timeline/: Cargo.toml
crates/transport/: Cargo.toml
docs/: ARCHITECTURE_OVERVIEW.md  BENCHMARKS.md  DEPLOYMENT.md  INSTALL.md  OPERATIONS.md  PERFORMANCE.md  SECURITY.md  architecture-phase1.md  architecture-phase10.md  architecture-phase2.md  architecture-phase3.md  architecture-phase4-phase5.md  architecture-phase7.md  architecture-phase8.md  architecture-phase9.md
docs/diagrams/: architecture.mmd  attack-lifecycle.mmd  database-schema.mmd  deployment.mmd  evidence-pipeline.mmd  fleet-architecture.mmd  request-flow.mmd  response-flow.mmd  telemetry-pipeline.mmd  threat-pipeline.mmd
examples/api/: curl-examples.sh  health-check.sh  openapi.yaml
examples/cli/: scan-example.sh
examples/config/: sentinelx.toml
examples/docker/: docker-compose.yml
examples/fleet/: multi-host-setup.md
examples/response/: custom-workflow.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_api_request.rs  fuzz_database_query.rs  fuzz_message_transport.rs  fuzz_response_policy.rs  fuzz_rule_parser.rs  fuzz_telemetry_event.rs
packaging/: PKGBUILD  install.sh  sentinelx.conf  sentinelx.install  sentinelx.service  sentinelx.spec  uninstall.sh
(+29 files in other folders)
