[package]
name = "sentinelx-fuzz"
version = "0.0.0"
authors = ["SentinelX Contributors"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

sentinelx-telemetry = { path = "../crates/telemetry" }
sentinelx-transport = { path = "../crates/transport" }
sentinelx-rule-engine = { path = "../crates/rule_engine" }
sentinelx-response = { path = "../crates/response" }
sentinelx-database = { path = "../crates/database" }
sentinelx-common = { path = "../crates/common" }
sentinelx-config = { path = "../crates/config" }

[[bin]]
name = "fuzz_telemetry_event"
path = "fuzz_targets/fuzz_telemetry_event.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_api_request"
path = "fuzz_targets/fuzz_api_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rule_parser"
path = "fuzz_targets/fuzz_rule_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_database_query"
path = "fuzz_targets/fuzz_database_query.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_message_transport"
path = "fuzz_targets/fuzz_message_transport.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_response_policy"
path = "fuzz_targets/fuzz_response_policy.rs"
test = false
doc = false
bench = false
