[package]
name = "sentinelx-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SentinelX endpoint agent - local telemetry collection, heartbeat, policy execution"

[dependencies]
sentinelx-common.workspace = true
sentinelx-telemetry.workspace = true
sentinelx-detector.workspace = true
sentinelx-response.workspace = true
sentinelx-transport.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
