[package]
name = "sentinelx-assessment"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Central assessment engine: scoring, trust, integrity, risk, reputation, confidence"

[dependencies]
sentinelx-common.workspace = true
sentinelx-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
