[package]
name = "sentinelx-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Audit telemetry provider for SentinelX (real NETLINK_AUDIT socket)"

[dependencies]
sentinelx-common.workspace = true
sentinelx-telemetry.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
libc.workspace = true
nix.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
