[package]
name = "sentinelx-behavior"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Behavior analysis engine for SentinelX"

[dependencies]
sentinelx-common.workspace = true
sentinelx-core.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
toml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
