[package]
name = "sentinelx-benchmarks"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Criterion benchmarks for SentinelX detection engines"

[[bench]]
name = "detector_scan"
harness = false

[[bench]]
name = "full_scan"
harness = false

[[bench]]
name = "analysis_pipeline"
harness = false

[[bench]]
name = "telemetry_throughput"
harness = false

[dependencies]
tokio = { workspace = true }
sentinelx-common = { workspace = true }
sentinelx-kernel = { workspace = true }
sentinelx-process = { workspace = true }
sentinelx-network = { workspace = true }
sentinelx-module = { workspace = true }
sentinelx-memory = { workspace = true }
sentinelx-integrity = { workspace = true }
sentinelx-persistence = { workspace = true }
sentinelx-forensics = { workspace = true }
sentinelx-timeline = { workspace = true }
sentinelx-correlation = { workspace = true }
sentinelx-reporting = { workspace = true }
sentinelx-telemetry = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
