[package]
name = "sentinelx-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Common types, errors, and traits for SentinelX"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
