[package]
name = "sentinelx-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Configuration management for SentinelX"

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
directories = "6"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
