[package]
name = "sentinelx-fleet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SentinelX fleet management - agent tracking, health monitoring, remote actions"

[dependencies]
sentinelx-common.workspace = true
sentinelx-telemetry.workspace = true
sentinelx-transport.workspace = true
sentinelx-agent.workspace = true
sentinelx-coordinator.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
