[package]
name = "sentinelx-forensics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Digital forensics evidence collection for SentinelX"

[dependencies]
sentinelx-common.workspace = true
sentinelx-evidence.workspace = true
tokio.workspace = true
tracing.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
