[package]
name = "sentinelx-incident"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Incident engine for SentinelX: lifecycle management of correlated security incidents"

[dependencies]
sentinelx-common.workspace = true
sentinelx-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
