[package]
name = "sentinelx-integrity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "File and system integrity monitoring for SentinelX"

[dependencies]
sentinelx-common.workspace = true
sentinelx-core.workspace = true
sentinelx-evidence.workspace = true
tokio.workspace = true
tracing.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
thiserror.workspace = true
walkdir.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
