[package]
name = "sentinelx-module"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Kernel module monitoring and DKOM detection for SentinelX"

[dependencies]
sentinelx-common.workspace = true
sentinelx-core.workspace = true
sentinelx-detector.workspace = true
sentinelx-evidence.workspace = true
tokio.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
