[package]
name = "sentinelx-reporting"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Report generation for SentinelX"

[dependencies]
sentinelx-common.workspace = true
sentinelx-assessment.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
uuid.workspace = true
